# lllifetracker-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20240722_000001_create_users_table.rs  m20240926_000001_create_records_table.rs  m20240927_000001_create_ambitions_table.rs  m20240927_000002_create_objectives_table.rs  m20240927_000003_create_actions_table.rs  m20240927_000004_create_ambitions_objectives_table.rs  m20240927_000004_create_tags_table.rs  m20240927_000005_create_objectives_actions_table.rs  m20240927_000005_create_records_table.rs  m20240927_000006_create_tags_table.rs  m20240927_000007_create_records_table.rs  m20241124_000001_create_memos_table.rs  m20241124_000002_create_memos_tags_table.rs  m20241201_000001_add_description_to_objective_action_tables.rs  m20241218_000001_create_mission_memos_table.rs  m20241218_000002_create_mission_memos_tags_table.rs  m20241222_000001_create_book_excerpts_table.rs  m20241222_000002_create_book_excerpts_tags_table.rs  m20241226_000001_add_archived_to_ambition_objective_action_tables.rs  m20241227_000001_remove_records_table.rs  m20241227_000002_create_action_tracks_table.rs  m20250219_000001_add_ordering_trackable_to_actions_table.rs  m20250303_000001_add_favorite_to_memos_table.rs  m20250308_000001_rename_objectives_to_desired_states_table.rs  m20250313_000001_rename_mission_memos_to_challenges_table.rs  m20250313_000002_rename_book_excerpts_to_reading_notes_table.rs  m20250315_000001_add_ordering_to_ambitions_and_desired_states_table.rs  m20250315_000002_create_diaries_table.rs  m20250316_000001_create_diaries_tags_table.rs  m20250322_000001_add_color_to_actions_table.rs  m20250407_000001_add_unique_constraint_to_action_tracks_table.rs  m20250410_000001_add_track_type_to_actions_table.rs  m20250411_000001_modify_action_id_to_required_in_action_tracks_table.rs  m20250412_000001_drop_my_way_link_tables.rs  m20250412_000002_drop_memos_and_challenges_tables.rs  m20250415_000001_add_name_to_tags_table.rs  m20250430_000001_create_mindset_table.rs  m20250610_000001_create_desired_state_categories_table.rs  m20250614_000001_remove_mindset_table.rs  (+16 more)
src/common/: Cargo.toml  lib.rs
src/common/db/: encryptor.rs  mod.rs
src/common/factory/: mod.rs  user.rs
src/common/redis/: mod.rs
src/common/settings/: mod.rs  types.rs
src/cron_processes/: Cargo.toml
src/cron_processes/notification/: mod.rs  my_way_reminder.rs  web_push_request_builder.rs
src/entities/: Cargo.toml  action.rs  action_goal.rs  action_track.rs  ambition.rs  ambition_objective.rs  ambitions_desired_states.rs  ambitions_objectives.rs  book_excerpt.rs  book_excerpts_tags.rs  challenge.rs  challenges_tags.rs  desired_state.rs  desired_state_category.rs  desired_states_actions.rs  diaries_tags.rs  diary.rs  lib.rs  memo.rs  memos_tags.rs  mindset.rs  mission_memo.rs  mission_memos_tags.rs  mod.rs  objective.rs  objective_action.rs  objectives_actions.rs  prelude.rs  reading_note.rs  reading_notes_tags.rs  record.rs  sea_orm_active_enums.rs  tag.rs  user.rs
src/entities/custom_methods/: mod.rs  notification_rule.rs  user.rs
src/life_tracker/: Cargo.toml  main.rs  startup.rs
src/routes/: Cargo.toml  health.rs  lib.rs  mod.rs  utils.rs
src/routes/action_tracks/: aggregation.rs  create.rs  delete.rs  list.rs  list_by_date.rs  (+2 more)
src/services/: Cargo.toml  action.rs  action_mutation.rs  action_query.rs  action_track_mutation.rs  action_track_query.rs  ambition.rs  ambition_mutation.rs  ambition_query.rs  book_excerpt_mutation.rs  book_excerpt_query.rs  challenge_mutation.rs  challenge_query.rs  desired_state_category_mutation.rs  desired_state_category_query.rs  desired_state_mutation.rs  desired_state_query.rs  diary_mutation.rs  diary_query.rs  lib.rs  memo_mutation.rs  memo_query.rs  mindset_mutation.rs  mindset_query.rs  mission_memo_mutation.rs  mission_memo_query.rs  mod.rs  objective.rs  objective_mutation.rs  objective_query.rs  reading_note_mutation.rs  reading_note_query.rs  tag_mutation.rs  tag_query.rs  user.rs
src/settings/: Cargo.toml  lib.rs
src/test_utils/: Cargo.toml  entities.rs  lib.rs  mod.rs  seed.rs
src/types/: Cargo.toml  action_tracks.rs  actions.rs  ambitions.rs  book_excerpts.rs  challenges.rs  db.rs  desired_state_category.rs  desired_states.rs  diaries.rs  general.rs  lib.rs  memos.rs  mindsets.rs  mission_memos.rs  mod.rs  objectives.rs  reading_notes.rs  tags.rs  users.rs
src/use_cases/: Cargo.toml  lib.rs
src/utils/: Cargo.toml  emails.rs  mod.rs
src/web_adapters/: Cargo.toml  lib.rs  utils.rs
tests/: Cargo.toml  lib.rs  utils.rs
tests/action_goals/: create.rs  mod.rs  remove.rs  set_new.rs
tests/action_tracks/: aggregation.rs  aggregation_daily.rs  create.rs  delete.rs  list.rs  list_by_date.rs  mod.rs  update.rs
tests/actions/: archive.rs  bulk_update_ordering.rs  convert_track_type.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  unarchive.rs  update.rs
tests/ambitions/: archive.rs  bulk_update_ordering.rs  create.rs  delete.rs  get.rs  list.rs  unarchive.rs  update.rs
tests/desired_state_categories/: bulk_update_ordering.rs  create.rs  delete.rs  list.rs  mod.rs  update.rs
tests/desired_states/: archive.rs  bulk_update_ordering.rs  convert.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  unarchive.rs  update.rs
tests/diaries/: create.rs  delete.rs  list.rs  update.rs
tests/direction_categories/: bulk_update_ordering.rs  create.rs  delete.rs  list.rs  update.rs
tests/directions/: archive.rs  bulk_update_ordering.rs  create.rs  delete.rs  get.rs  list.rs  unarchive.rs  update.rs
tests/journals/: list.rs
tests/mindsets/: archive.rs  bulk_update_ordering.rs  create.rs  delete.rs  get.rs  list.rs  unarchive.rs  update.rs
tests/notification/: mod.rs
tests/reading_notes/: create.rs  delete.rs  list.rs  list_titles.rs  mod.rs  update.rs
tests/tags/: create.rs  delete.rs  list.rs  mod.rs  update.rs
tests/thinking_notes/: create.rs  delete.rs  list.rs  mod.rs  update.rs
tests/users/: get_me.rs  integration.rs  login.rs  logout.rs  mod.rs
(+455 files in other folders)
