[workspace]
resolver = "2"
members = [
    ".",
    "src/entities",
    "src/common",
    "src/use_cases",
    "src/db_adapters",
    "src/web_adapters",
    "src/server",
    "src/life_tracker",
    "tests",
]
default-members = ["src/life_tracker"]

[workspace.dependencies]
actix-http = "3.*"
actix-session = { version = "^0.10.0", features = ["redis-session"] }
actix-web = "^4.8.0"
argon2 = { version = "^0.5.3", default-features = false }
chrono = "^0.4.40"
config = { version = "^0.14.0", features = ["yaml"] }
deadpool-redis = "^0.18.0"
dotenvy = "^0.15.7"
env_logger = "0.11.8"
futures = { version = "^0.3.28", default-features = false }
hex = { version = "^0.4.3", default-features = false }
lettre = { version = "^0.11.10", default-features = false, features = [
    "builder",
    "pool",
    "rustls-tls",
    "smtp-transport",
] }
minijinja = { version = "^2.1.0", features = [
    "loader",
    "serde",
], default-features = false }
pasetors = { version = "^0.6.8", features = [
    "std",
    "v4",
], default-features = false }
once_cell = { version = "^1.19.0", default-features = false }
sea-orm = { version = "~1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
serde = "^1.0.219"
serde_json = "^1.0.120"
tracing = "^0.1.40"
tracing-appender = "^0.2.3"
tracing-subscriber = { version = "^0.3.18", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    "json",
    "tracing-log",
] }
urlencoding = "2.1.3"
uuid = { version = "^1.16.0", features = ["v7", "serde"] }
