[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "tests"
path = "lib.rs"

[dependencies]
common = { path = "../src/common", features = ["db", "factory", "redis", "settings"] }
entities = { path = "../src/entities" }
routes = { path = "../src/routes" }
types = { path = "../src/types" }
server = { path = "../src/server" }

actix-http.workspace = true
actix-session.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
