[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "tests"
path = "lib.rs"

[dependencies]
common = { path = "../src/common", features = [
    "db",
    "factory",
    "redis",
    "settings",
] }
db_adapters = { path = "../src/db_adapters" }
entities = { path = "../src/entities" }
routes = { path = "../src/routes" }
server = { path = "../src/server" }
types = { path = "../src/types" }
use_cases = { path = "../src/use_cases" }

actix-http.workspace = true
actix-session.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
