[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "lib.rs"

[dependencies]
entities = { path = "../entities", optional = true }
migration = { path = "../../migration", optional = true }

aes-gcm = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }
dotenvy.workspace = true
serde = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
db = ["dep:sea-orm", "dep:migration", "settings", "dep:aes-gcm", "dep:base64"]
factory = ["dep:entities", "dep:sea-orm", "dep:uuid", "dep:chrono", "db", "settings"]
redis = ["dep:deadpool-redis", "settings"]
settings = ["dep:serde"]
