[package]
name = "cron_processes"
version = "0.1.0"
edition = "2021"

[lib]
name = "cron_processes"
path = "lib.rs"

[dependencies]
common = { path = "../common", features = ["db", "settings"] }
db_adapters = { path = "../db_adapters" }
entities = { path = "../entities" }

aes-gcm.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
hkdf.workspace = true
jwt-simple.workspace = true
p256.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["db", "settings", "factory"] }

actix-web.workspace = true
ece.workspace = true
uuid.workspace = true
