[package]
name = "life_tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "life_tracker"
path = "main.rs"

[dependencies]
migration = { path = "../../migration" }
routes = { path = "../routes" }
settings = { path = "../settings" }
utils = { path = "../utils" }

actix-session.workspace = true
actix-web.workspace = true
deadpool-redis.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
