[package]
name = "life_tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "life_tracker"
path = "main.rs"

[dependencies]
common = { path = "../common", features = ["db", "settings", "redis"] }
server = { path = "../server" }
utils = { path = "../utils" }

actix-session.workspace = true
actix-web.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
