[package]
name = "routes"
version = "0.1.0"
edition = "2021"

[lib]
name = "routes"
path = "lib.rs"

[dependencies]
entities = { path = "../entities" }
services = { path = "../services" }
settings = { path = "../settings" }
types = { path = "../types" }
utils = { path = "../utils" }

actix-session.workspace = true
actix-web.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
test_utils = { path = "../test_utils" }

actix-http.workspace = true
serde_json.workspace = true
