[package]
name = "services"
version = "0.1.0"
edition = "2021"

[lib]
name = "services"
path = "lib.rs"

[dependencies]
actix-web = "^4.8.0"
chrono = "^0.4.40"
entities = { path = "../entities" }
# Features here: https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#extra-features
sea-orm = { version = "~1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
serde = "^1.0.219"
types = { path = "../types" }
uuid = { version = "^1.16.0", features = ["v7", "serde"] }

[dev-dependencies]
test_utils = { path = "../test_utils" }