[package]
name = "services"
version = "0.1.0"
edition = "2021"

[lib]
name = "services"
path = "lib.rs"

[dependencies]
entities = { path = "../entities" }
types = { path = "../types" }

actix-web.workspace = true
chrono.workspace = true
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
test_utils = { path = "../test_utils" }