[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[lib]
name = "settings"
path = "lib.rs"

[dependencies]
config = { version = "^0.14.0", features = ["yaml"] }
minijinja = { version = "^2.1.0", features = [
    "loader",
], default-features = false }
once_cell = { version = "^1.19.0", default-features = false }
serde = "^1.0.219"