[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_utils"
path = "lib.rs"

[dependencies]
chrono = "^0.4.38"
dotenvy = "^0.15.7"
entities = { path = "../entities" }
migration = { path = "../../migration" }
# # Features here: https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#extra-features
sea-orm = { version = "~1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
uuid = { version = "^1.10.0", features = ["v7", "serde"] }