[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_utils"
path = "lib.rs"

[dependencies]
common = { path = "../common", features = ["db", "settings"]}
entities = { path = "../entities" }

chrono.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
uuid.workspace = true