[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

[lib]
name = "use_cases"
path = "lib.rs"

[dependencies]
common = { path = "../common", features = ["db", "settings"]}
db_adapters = { path = "../db_adapters" }
entities = { path = "../entities" }

actix-tls.workspace = true
awc.workspace = true
base64.workspace = true
chrono.workspace = true
ece.workspace = true
http.workspace = true
jwt-simple.workspace = true
sea-orm.workspace = true
serde.workspace = true
uuid.workspace = true
