[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

[lib]
name = "use_cases"
path = "lib.rs"

[dependencies]
common = { path = "../common", features = ["db", "settings"] }
db_adapters = { path = "../db_adapters" }
entities = { path = "../entities" }

actix-tls.workspace = true
aes-gcm.workspace = true
awc.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
hkdf.workspace = true
jwt-simple.workspace = true
p256.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["db", "settings", "factory"] }

ece.workspace = true
