[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "lib.rs"

[dependencies]
common = { path = "../common", features = ["settings"] }
services = { path = "../services" }
types = { path = "../types" }

actix-session.workspace = true
actix-web.workspace = true
argon2.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
hex.workspace = true
lettre.workspace = true
minijinja.workspace = true
once_cell.workspace = true
pasetors.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
entities = { path = "../entities" }
common = { path = "../common", features = ["db", "factory"]}