[package]
name = "web_adapters"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_adapters"
path = "lib.rs"

[dependencies]
db_adapters = { path = "../db_adapters" }
entities = { path = "../entities" }
use_cases = { path = "../use_cases" }

actix-web.workspace = true
sea-orm.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
